--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,11 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#FFF53649</color>
+    <color name="blue">#FF0080FF</color>
+
+    <color name="light_bg_color">#FFFFFFFF</color>
+    <color name="bg_fields_color">#FFFAFAFA</color>
+    <color name="placeholder_text_color">#FF707070</color>
+    
 </resources>
