--- a/app/src/main/res/layout/activity_introduction.xml
+++ b/app/src/main/res/layout/activity_introduction.xml
@@ -1,10 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.IntroductionActivity">
+    tools:context=".view.IntroductionActivity"
+    android:background="@color/white"
+    >
+
+
+   <ScrollView
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
+
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:orientation="vertical"
+           android:layout_gravity="center"
+           android:gravity="center">
+
+           <ImageView
+               android:layout_width="match_parent"
+               android:layout_height="160dp"
+               android:contentDescription="@string/logo_placeholder"
+               android:src="@drawable/ic_logo" />
+
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:fontFamily="@font/inter_regular"
+               android:textSize="32sp"
+               android:textColor="@color/light_txt_color"
+               android:layout_marginTop="16dp"
+               android:text="@string/app_name"/>
+
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:fontFamily="@font/inter_regular"
+               android:textSize="16sp"
+               android:textColor="@color/light_txt_color"
+               android:layout_marginTop="23dp"
+               android:textAlignment="center"
+               android:layout_marginHorizontal="20dp"
+               android:text="@string/app_description"
+               />
+
+           <include
+               android:id="@+id/buttonOne"
+               layout="@layout/primary_button"
+               android:text="@string/app_name"
+               tools:ignore="MissingAttributes"/>
+
+       </LinearLayout>
+
+   </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
