--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
 
     <color name="light_bg_color">#FFFFFFFF</color>
     <color name="bg_fields_color">#FFFAFAFA</color>
+    <color name="light_txt_color">#FF333333</color>
     <color name="placeholder_text_color">#FF707070</color>
     
 </resources>
