--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,9 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.AIRecommender" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+         <item name="colorPrimary">@color/white</item>
+        <item name="android:statusBarColor" >?attr/colorOnPrimary</item>
+        <item name="android:windowLightStatusBar" >true</item>
     </style>
 
     <style name="Theme.AIRecommender" parent="Base.Theme.AIRecommender" />
