--- a/app/src/main/res/layout/activity_introduction.xml
+++ b/app/src/main/res/layout/activity_introduction.xml
@@ -49,9 +49,11 @@
 
            <include
                android:id="@+id/buttonOne"
+               android:layout_width="wrap_content"
+               android:layout_height="50dp"
+               android:text="@string/getStarted"
                layout="@layout/primary_button"
-               android:text="@string/app_name"
-               tools:ignore="MissingAttributes"/>
+               android:layout_marginTop="40dp"/>
 
        </LinearLayout>
 
