--- a/app/src/main/res/layout/activity_introduction.xml
+++ b/app/src/main/res/layout/activity_introduction.xml
@@ -50,10 +50,13 @@
            <Button
                android:id="@+id/customButton"
                android:layout_marginTop="40dp"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
+               android:layout_width="match_parent"
+               android:layout_height="56dp"
+               android:layout_marginHorizontal="84dp"
                android:text="@string/getStarted"
                android:elevation="12dp"
+               android:fontFamily="@font/inter_medium"
+               android:textSize="16sp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/black"
                android:textColor="@android:color/white"/>
