--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/ic_back"
             android:backgroundTint="@color/black"
-            />
+            android:contentDescription="@string/logo_placeholder" />
 
         <TextView
             android:id="@+id/textView"
@@ -49,7 +49,7 @@
             <ImageView
                 android:id="@+id/appLogo"
                 android:layout_width="match_parent"
-                android:layout_height="220dp"
+                android:layout_height="280dp"
                 android:src="@drawable/ic_signin_screen"
                 android:layout_marginTop="120dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -70,7 +70,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:boxStrokeColor="@color/border_color"
                 app:boxStrokeWidth="0dp"
-                android:textColorHint="@color/light_bg_color"
+                android:textColorHint="@color/placeholder_text_color"
                 app:boxStrokeWidthFocused="0dp"
                 app:layout_constraintTop_toBottomOf="@+id/appLogo">
 
@@ -78,6 +78,7 @@
                     android:id="@+id/signin_user_email"
                     android:layout_width="match_parent"
                     android:layout_height="54dp"
+                    android:autofillHints="Email"
                     android:background="@drawable/bg_input"
                     android:ems="10"
                     android:fontFamily="@font/inter_regular"
@@ -113,10 +114,12 @@
                     android:id="@+id/signin_user_password"
                     android:layout_width="match_parent"
                     android:layout_height="54dp"
+                    android:autofillHints="Password"
                     android:background="@drawable/bg_input"
                     android:ems="10"
                     android:fontFamily="@font/inter_regular"
                     android:hint="@string/password"
+                    android:textColorHint="@color/placeholder_text_color"
                     android:inputType="textPassword"
                     android:paddingStart="12dp"
                     android:paddingEnd="12dp"
@@ -128,11 +131,11 @@
             <TextView
                 android:id="@+id/resetPassword"
                 app:layout_constraintTop_toBottomOf="@+id/password_layout"
-                android:text="Forget password?"
+                android:text="@string/forget_password"
                 android:textAlignment="textEnd"
-                android:fontFamily="@font/inter_regular"
+                android:fontFamily="@font/inter_medium"
                 android:textColor="@color/blue"
-                android:textSize="14sp"
+                android:textSize="16sp"
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_marginStart="20dp"
@@ -140,32 +143,28 @@
                 android:layout_height="wrap_content"
                 />
 
-            <android.widget.Button
-                android:elevation="12dp"
+            <Button
+                android:id="@+id/google_btn"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:text="@string/sign_in"
+                android:fontFamily="@font/inter_medium"
+                android:textSize="16sp"
+                android:elevation="6dp"
+                android:layout_marginHorizontal="32dp"
                 android:layout_marginBottom="5dp"
                 android:backgroundTint="@color/black"
-                android:id="@+id/login_button"
-                android:layout_width="match_parent"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_height="48dp"
+                android:textColor="@android:color/white"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
                 android:layout_marginTop="20dp"
-                android:text="@string/sign_in"
                 android:textAllCaps="false"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/resetPassword"
-                android:fontFamily="@font/inter_regular"
-                android:textColor="@color/white"
-                app:backgroundTint="@color/light_txt_color"
                 />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/login_button"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginStart="20dp"
                 android:gravity="center"
                 android:orientation="horizontal"
