Naveed : Refactoring some code.

--- a/app/src/main/res/layout/activity_introduction.xml
+++ b/app/src/main/res/layout/activity_introduction.xml
@@ -5,9 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.IntroductionActivity"
-    android:background="@color/white"
-    >
-
+    android:background="@color/light_bg_color">
 
    <ScrollView
        android:layout_width="match_parent"
@@ -32,24 +30,24 @@
                android:fontFamily="@font/inter_regular"
                android:textSize="32sp"
                android:textColor="@color/light_txt_color"
-               android:layout_marginTop="16dp"
+               android:layout_marginTop="20dp"
                android:text="@string/app_name"/>
 
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
-               android:textSize="16sp"
+               android:textSize="14sp"
                android:textColor="@color/light_txt_color"
-               android:layout_marginTop="23dp"
+               android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:layout_marginHorizontal="20dp"
                android:text="@string/app_description"
                />
 
            <Button
-               android:id="@+id/customButton"
-               android:layout_marginTop="40dp"
+               android:id="@+id/getStartedBtn"
+               android:layout_marginTop="80dp"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="84dp"
