--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/light_bg_color"
     tools:context=".view.AccountActivity">
 
     <ScrollView
@@ -56,6 +56,7 @@
                 android:textSize="21sp"
                 android:fontFamily="@font/inter_regular"
                 android:text="@string/or"
+                android:textColor="@color/light_txt_color"
                 android:textAlignment="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
