--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,10 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/light_bg_color"
     tools:context=".view.LoginActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -21,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/ic_back"
-            android:backgroundTint="@color/black"
+            android:backgroundTint="@color/light_txt_color"
             android:contentDescription="@string/logo_placeholder" />
 
         <TextView
@@ -49,7 +48,7 @@
             <ImageView
                 android:id="@+id/appLogo"
                 android:layout_width="match_parent"
-                android:layout_height="280dp"
+                android:layout_height="250dp"
                 android:src="@drawable/ic_signin_screen"
                 android:layout_marginTop="120dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -70,7 +69,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:boxStrokeColor="@color/border_color"
                 app:boxStrokeWidth="0dp"
-                android:textColorHint="@color/placeholder_text_color"
+                android:textColorHint="@color/black"
                 app:boxStrokeWidthFocused="0dp"
                 app:layout_constraintTop_toBottomOf="@+id/appLogo">
 
@@ -78,7 +77,7 @@
                     android:id="@+id/signin_user_email"
                     android:layout_width="match_parent"
                     android:layout_height="54dp"
-                    android:autofillHints="Email"
+                    android:autofillHints="emailAddress"
                     android:background="@drawable/bg_input"
                     android:ems="10"
                     android:fontFamily="@font/inter_regular"
@@ -87,7 +86,7 @@
                     android:paddingStart="12dp"
                     android:paddingEnd="12dp"
                     android:textColor="@color/light_txt_color"
-                    android:textColorHint="@color/placeholder_text_color"
+                    android:textColorHint="@color/black"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -105,7 +104,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:boxStrokeColor="@color/border_color"
                 app:boxStrokeWidth="0dp"
-                android:textColorHint="@color/placeholder_text_color"
+                android:textColorHint="@color/black"
                 app:passwordToggleTint="#707070"
                 app:boxStrokeWidthFocused="0dp"
                 app:layout_constraintTop_toBottomOf="@+id/email_layout">
@@ -114,16 +113,15 @@
                     android:id="@+id/signin_user_password"
                     android:layout_width="match_parent"
                     android:layout_height="54dp"
-                    android:autofillHints="Password"
                     android:background="@drawable/bg_input"
                     android:ems="10"
                     android:fontFamily="@font/inter_regular"
                     android:hint="@string/password"
-                    android:textColorHint="@color/placeholder_text_color"
                     android:inputType="textPassword"
                     android:paddingStart="12dp"
                     android:paddingEnd="12dp"
                     android:textColor="@color/light_txt_color"
+
                     />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -133,9 +131,9 @@
                 app:layout_constraintTop_toBottomOf="@+id/password_layout"
                 android:text="@string/forget_password"
                 android:textAlignment="textEnd"
-                android:fontFamily="@font/inter_medium"
+                android:fontFamily="@font/inter_regular"
                 android:textColor="@color/blue"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_marginStart="20dp"
@@ -144,27 +142,28 @@
                 />
 
             <Button
-                android:id="@+id/google_btn"
+                android:id="@+id/login_button"
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
-                android:text="@string/sign_in"
-                android:fontFamily="@font/inter_medium"
-                android:textSize="16sp"
-                android:elevation="6dp"
                 android:layout_marginHorizontal="32dp"
+                android:layout_marginStart="20sp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20sp"
                 android:layout_marginBottom="5dp"
                 android:backgroundTint="@color/black"
-                android:textColor="@android:color/white"
-                android:layout_marginStart="20sp"
-                android:layout_marginEnd="20sp"
-                android:layout_marginTop="20dp"
+                android:elevation="6dp"
+                android:fontFamily="@font/inter_medium"
+                android:text="@string/sign_in"
                 android:textAllCaps="false"
-                />
+                android:textColor="@android:color/white"
+                android:textSize="16sp" />
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
+                app:layout_constraintTop_toBottomOf="@id/login_button"
+                android:layout_marginTop="30dp"
                 android:layout_marginStart="20dp"
                 android:gravity="center"
                 android:orientation="horizontal"
@@ -194,7 +193,5 @@
         </LinearLayout>
 
     </ScrollView>
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
