Hamza: This implementation creates a recommender UI with the following features:
       All inputs are implemented as dropdowns using Material Design's ExposedDropdownMenu
       The layout matches the design in your screenshot with:

       Top toolbar with back button and title
       Sections for Age, Gender, Budget
       Body Measurements section with Body Type, Fit Type, Height, Weight, Size
       Style Preference section with Style, Colors, Fabric
       Occasion section with Occasion Type
       Clothing Type section with Items and Preference
       Recommend button at the bottom

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,5 +25,23 @@
     </androidx.appcompat.widget.Toolbar>
 
 
+    <Button
+        android:id="@+id/cloth_form"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:layout_marginHorizontal="32dp"
+        android:layout_marginStart="20sp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="20sp"
+        android:layout_marginBottom="5dp"
+        android:backgroundTint="@color/black"
+        android:elevation="6dp"
+        android:fontFamily="@font/inter_medium"
+        android:text="Cloth Form"
+        android:textAllCaps="false"
+        android:textColor="@android:color/white"
+        android:textSize="16sp" />
+
+
 
 </RelativeLayout>
