--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/light_bg_color"
     tools:context=".view.fragments.HomeFragment">
 
@@ -11,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="@drawable/bg_toolbar"
-        android:elevation="6dp">
+        app:elevation="6dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -39,23 +40,35 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/logo_placeholder"
-                android:src="@drawable/ic_account_screen" />
+                android:src="@drawable/ic_main_screen" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:fontFamily="@font/inter_regular"
+                android:fontFamily="@font/inter_medium"
                 android:textSize="20sp"
+                android:layout_marginTop="50dp"
                 android:textColor="@color/light_txt_color"
                 android:text="@string/get_inspired" />
+
+            <TextView
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:layout_gravity="center"
+                android:fontFamily="@font/inter_regular"
+                android:textSize="14sp"
+                android:layout_marginTop="8dp"
+                android:textColor="@color/light_txt_color"
+                android:text="@string/tagline" />
 
             <Button
                 android:id="@+id/cloth_form"
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
                 android:layout_marginHorizontal="32dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="60dp"
                 android:layout_marginBottom="5dp"
                 android:backgroundTint="@color/black"
                 android:elevation="6dp"
