--- a/app/src/main/res/layout/confirm_dialog_layout.xml
+++ b/app/src/main/res/layout/confirm_dialog_layout.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@drawable/bg_input"
+    android:backgroundTint="@color/light_bg_color"
     android:gravity="center"
     android:padding="20dp"
     android:layout_margin="20dp"
