--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/ic_back"
-            android:backgroundTint="@color/black"
+            android:backgroundTint="@color/light_txt_color"
             android:contentDescription="@string/logo_placeholder" />
 
         <TextView
@@ -47,17 +47,17 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/appLogo"
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/userAvatar"
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:src="@drawable/ic_signup_screen"
-                android:layout_marginTop="90dp"
+                android:layout_height="150dp"
+                android:src="@drawable/ic_user"
+                android:layout_marginTop="120dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:contentDescription="@string/app_name"
-                />
+                app:tint="@color/light_txt_color" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/name_layout"
@@ -68,9 +68,10 @@
                 android:layout_marginEnd="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:boxStrokeColor="@color/border_color"
                 app:boxStrokeWidth="0dp"
-                android:textColorHint="@color/placeholder_text_color"
+                app:boxStrokeColor="@color/black"
+                android:textColorHint="@color/black"
+                app:hintTextColor="@color/black"
                 app:boxStrokeWidthFocused="0dp"
                 app:layout_constraintTop_toBottomOf="@+id/appLogo">
 
@@ -79,8 +80,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="54dp"
                     android:autofillHints="username"
-                    android:textColor="@color/light_txt_color"
-                    android:textColorHint="@color/placeholder_text_color"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/black"
                     android:background="@drawable/bg_input"
                     android:ems="10"
                     android:fontFamily="@font/inter_regular"
@@ -103,9 +104,10 @@
                 android:layout_marginEnd="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:boxStrokeColor="@color/border_color"
                 app:boxStrokeWidth="0dp"
-                android:textColorHint="@color/placeholder_text_color"
+                app:boxStrokeColor="@color/black"
+                android:textColorHint="@color/black"
+                app:hintTextColor="@color/black"
                 app:boxStrokeWidthFocused="0dp"
                 app:layout_constraintTop_toBottomOf="@+id/name_layout">
 
@@ -115,8 +117,8 @@
                     android:layout_height="54dp"
                     android:autofillHints="emailAddress"
                     android:background="@drawable/bg_input"
-                    android:textColor="@color/light_txt_color"
-                    android:textColorHint="@color/light_txt_color"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/black"
                     android:ems="10"
                     android:fontFamily="@font/inter_regular"
                     android:hint="@string/email"
@@ -138,9 +140,10 @@
                 android:layout_marginEnd="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:boxStrokeColor="@color/border_color"
                 app:boxStrokeWidth="0dp"
-                android:textColorHint="@color/placeholder_text_color"
+                app:boxStrokeColor="@color/black"
+                android:textColorHint="@color/black"
+                app:hintTextColor="@color/black"
                 app:passwordToggleEnabled="true"
                 app:boxStrokeWidthFocused="0dp"
                 app:passwordToggleTint="#707070"
@@ -151,8 +154,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="54dp"
                     android:autofillHints="password"
-                    android:textColor="@color/light_txt_color"
-                    android:textColorHint="@color/light_txt_color"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/black"
                     android:background="@drawable/bg_input"
                     android:hint="@string/password"
                     android:inputType="textPassword"
