Naveed : Updating authentication mechanism.

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -109,7 +109,7 @@
                     android:paddingEnd="10dp"
                     android:textAlignment="textStart"
                     android:layout_marginTop="10dp"
-                    android:drawableEnd="@drawable/ic_edit"
+                    android:drawableEnd="@drawable/ic_outline_heart"
                     />
 
                 <android.widget.Button
