Naveed : Updating Favourite Images Record.

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -95,7 +95,7 @@
                     />
 
                 <android.widget.Button
-                    android:id="@+id/edu_whiteboard"
+                    android:id="@+id/favourite_images"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/favourite"
