Naveed : Updating Favourite Images.

--- a/app/src/main/res/layout/activity_favourite_images.xml
+++ b/app/src/main/res/layout/activity_favourite_images.xml
@@ -5,10 +5,41 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/light_bg_color"
     tools:context=".view.FavouriteImagesActivity">
+
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/bg_toolbar"
+        android:elevation="6dp">
+
+        <ImageView
+            android:id="@+id/goBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_back"
+            android:backgroundTint="@color/light_txt_color"
+            android:contentDescription="@string/logo_placeholder" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/light_txt_color"
+            android:text="@string/favourite_images_text"
+            android:textSize="21sp"
+            android:fontFamily="@font/inter_regular"
+            android:layout_gravity="center"
+            />
+
+    </androidx.appcompat.widget.Toolbar>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/favourite_images_rv"
+        android:layout_marginTop="60dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
@@ -19,7 +50,6 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center"
-        android:visibility="gone"
         >
 
         <ImageView
