--- a/app/src/main/res/layout/activity_makeup.xml
+++ b/app/src/main/res/layout/activity_makeup.xml
@@ -37,7 +37,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
         android:padding="16dp"
         android:layout_marginBottom="30dp"
         app:layout_constraintTop_toBottomOf="@id/toolbar">
